<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentCalcular"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcularFragment">

    <TextView
        android:id="@+id/tvTituloCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/app_name"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/spAtividadesCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <Spinner
        android:id="@+id/spAtividadesCalcular"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toTopOf="@+id/etTempoCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/etTempoCalcular"
        android:layout_width="209dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/tempo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <Button
        android:id="@+id/btnCalcularCaloria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:hint="@string/calcular"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTempoCalcular"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvSaidaCalcular"
        android:layout_width="327dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcularCaloria" />

    <EditText
        android:id="@+id/etPesoCalcular"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/peso"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcularCaloria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTempoCalcular"
        app:layout_constraintVertical_bias="0.147" />
</androidx.constraintlayout.widget.ConstraintLayout>